--- a/app/src/main/res/layout/map_recycleview.xml
+++ b/app/src/main/res/layout/map_recycleview.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="13dp"
+    android:layout_marginTop="13dp"
     android:scaleType = "centerCrop">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_centerVertical="true"
+        android:background="#405fe5" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="21px"
-        android:layout_marginRight="80dp"
-        android:layout_marginLeft="80dp">
+        card_view:cardCornerRadius="21dp"
+        android:layout_centerHorizontal="true">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/linear"
+            android:layout_width="206dp"
             android:layout_height="match_parent"
             android:clickable="true"
-            android:orientation="vertical">
+            android:focusable="true"
+            android:orientation="vertical"
+            android:gravity="center">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -30,17 +38,38 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:adjustViewBounds="true"
-                    android:scaleType="centerInside"/>
+                    android:scaleType="centerInside" />
 
                 <ImageButton
                     android:id="@+id/show_hint"
-                    android:layout_width="50px"
-                    android:layout_height="50px"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/infoicnhdpi" />
+
+                <LinearLayout
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="13dp"
-                    android:background="@drawable/infoicnhdpi"/>
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/ring_shape_red"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/number"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/robotomedium"
+                        android:gravity="center"
+                        android:textColor="@color/colorWhite" />
+
+                </LinearLayout>
 
             </RelativeLayout>
 
@@ -49,14 +78,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:background="#405fe5"
+                android:fontFamily="@font/robotomedium"
                 android:gravity="left|center_vertical"
                 android:paddingLeft="5dp"
                 android:text="Narva Battle"
                 android:textColor="#FFFFFF"
-                android:textSize="12dp"
-                android:fontFamily="@font/robotomedium"/>
+                android:textSize="12dp" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+</RelativeLayout>
