--- a/app/src/main/res/layout/hint_text_layout.xml
+++ b/app/src/main/res/layout/hint_text_layout.xml
@@ -1,43 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center"
-    android:scaleType = "centerCrop">
+    android:scaleType="centerCrop">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#405fe5">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        card_view:cardCornerRadius="20dp"
+        card_view:cardBackgroundColor="#405fe5">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="#405fe5">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight=".80">
 
                 <LinearLayout
                     android:id="@+id/hint_number"
-                    android:background="@drawable/ring_shape_red"
-                    android:orientation="vertical"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="5dp">
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/white_ring_shape"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/number"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:fontFamily="@font/robotomedium"
                         android:gravity="center"
-                        android:textColor="@color/colorWhite" />
+                        android:textColor="#405fe5" />
 
                 </LinearLayout>
 
@@ -45,52 +50,64 @@
                     android:id="@+id/text_header"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="15sp"
+                    android:layout_weight=".80"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="5dp"
                     android:fontFamily="@font/robotomedium"
-                    android:layout_marginLeft="5dp"/>
+                    android:gravity="bottom"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="15sp" />
+
+                <ImageButton
+                    android:id="@+id/close"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/ic_baseline_close_24"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="10dp">
+
+                </ImageButton>
             </LinearLayout>
 
             <ScrollView
                 android:id="@+id/SCROLLER_ID"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:scrollbars="vertical"
-                android:fillViewport="true"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp">
+                android:layout_marginBottom="5dp"
+                android:fillViewport="true"
+                android:scrollbars="vertical">
 
                 <TextView
                     android:id="@+id/hint_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
                     android:layout_weight=".20"
+                    android:fontFamily="@font/robotolight"
                     android:textColor="@color/colorWhite"
-                    android:fontFamily="@font/robotomedium"
-                    android:layout_marginLeft="40dp"/>
+                    />
 
             </ScrollView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="5dp"
                 android:orientation="horizontal"
-                android:layout_marginBottom="5dp">
+                android:gravity="center">
 
                 <Button
                     android:id="@+id/next"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="100dp"
-                    android:layout_marginRight="100dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:background="#33cc33"
                     android:text="Next"
                     android:textColor="#ffffff"
                     android:textSize="20sp">
 
                 </Button>
-
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
