--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -29,18 +29,19 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/robotomedium"
-            android:gravity="center"
             android:textColor="@color/colorWhite"
-            android:textSize="20dp"
+            android:textSize="25dp"
             android:layout_marginStart="10dp"
             app:layout_constraintStart_toEndOf="@+id/button_back"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="13dp"
+            android:gravity="bottom"/>
 
         <ImageView
             android:id="@+id/imageView6"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="22dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="38dp"
             android:layout_marginRight="10dp"
             android:src="@drawable/point_star_icnhdpi"
             app:layout_constraintEnd_toStartOf="@+id/points"
@@ -51,9 +52,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginEnd="40dp"
-            android:gravity="center"
+            android:gravity="bottom"
             android:textColor="@color/colorWhite"
             android:textSize="20dp"
+            android:layout_marginBottom="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -84,35 +86,43 @@
             android:layout_alignParentEnd="true"
             android:gravity="center"
             android:textColor="#ffffff"
-            android:background="@drawable/ring_shape">
-
+            android:background="@drawable/ring_shape"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp">
         </TextView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/setpath"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/protivoves"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="0dp"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager">
+
         </androidx.recyclerview.widget.RecyclerView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/hint_shower"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_above="@+id/setpath"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="80dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="70dp">
-
+            android:layout_marginBottom="50dp">
         </androidx.recyclerview.widget.RecyclerView>
+
+        <TextView
+            android:id="@+id/protivoves"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_alignParentBottom="true" />
 
     </RelativeLayout>
 
