--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -85,7 +85,7 @@
             android:id="@+id/button2"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
-            android:layout_height="56dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:background="#6699ff"
@@ -102,7 +102,7 @@
             android:id="@+id/buttonRegister"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
-            android:layout_height="56dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:background="#6699ff"
@@ -119,7 +119,7 @@
             android:id="@+id/Anonymous"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
-            android:layout_height="56dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="50dp"
