--- a/app/src/main/res/layout/map_recycleview.xml
+++ b/app/src/main/res/layout/map_recycleview.xml
@@ -40,7 +40,7 @@
                     android:layout_height="25dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="65dp"
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/infoicnhdpi" />
 
@@ -49,8 +49,8 @@
                     android:layout_height="25dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="15dp"
                     android:background="@drawable/ring_shape_red"
                     android:orientation="vertical">
 
@@ -66,18 +66,24 @@
                 </LinearLayout>
 
             </RelativeLayout>
-
-            <TextView
-                android:id="@+id/info_text"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:background="#405fe5"
-                android:fontFamily="@font/robotomedium"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="5dp"
-                android:text="Narva Battle"
-                android:textColor="#FFFFFF"
-                android:textSize="12dp" />
+                android:layout_height="match_parent"
+                android:background="#405fe5">
+
+                <TextView
+                    android:id="@+id/info_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="15dp"
+                    android:fontFamily="@font/robotolight"
+                    android:gravity="left|center_vertical"
+                    android:paddingLeft="5dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="12dp" />
+
+
+            </LinearLayout>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
