--- a/app/src/main/res/layout/nav.xml
+++ b/app/src/main/res/layout/nav.xml
@@ -30,11 +30,11 @@
                 android:layout_alignParentStart="true"
                 android:contentDescription="@string/app_name"
                 android:src="@drawable/menu_btnhdpi"
-                android:layout_marginBottom="12dp"/>
+                android:layout_marginBottom="15dp"/>
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_toStartOf="@+id/points"
                 android:src="@drawable/point_star_icnhdpi"
                 android:layout_marginRight="10dp"
@@ -45,10 +45,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:textColor="@color/colorWhite"
                 android:textSize="20dp"
-                android:layout_marginTop="15dp"/>
+                android:layout_marginBottom="5dp"/>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -60,7 +60,7 @@
             <EditText
                 android:id="@+id/search"
                 android:layout_width="match_parent"
-                android:layout_height="39dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:background="@drawable/back"
                 android:paddingLeft="40dp"
@@ -70,8 +70,11 @@
                 android:padding="3dp"
                 android:id="@+id/username_icon"
                 android:src="@drawable/gps_icnhdpi"
-                android:layout_width="40dp"
-                android:layout_height="40dp"/>
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:foregroundGravity="center"
+                android:layout_marginTop="7dp"
+                android:layout_marginLeft="5dp"/>
 
 
         </RelativeLayout>
