--- a/app/src/main/res/layout/recycleview_tours2.xml
+++ b/app/src/main/res/layout/recycleview_tours2.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="13dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
     android:scaleType="centerCrop">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="21px">
+        card_view:cardCornerRadius="40px"
+        android:background="#000000">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,12 +28,13 @@
                 <ImageView
                     android:id="@+id/photo"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:adjustViewBounds="true" />
+                    android:layout_height="140dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"/>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:background="@drawable/ring_shape"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
@@ -45,16 +48,16 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="5dp"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="15dp"
+                        android:fontFamily="@font/robotomedium"
                         android:gravity="center"
-                        android:fontFamily="@font/robotomedium"/>
+                        android:textColor="@color/colorWhite"
+                        android:textSize="15dp" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="min"
-                        android:textSize="7dp"
+                        android:textSize="10dp"
                         android:gravity="center"
                         android:textColor="@color/colorWhite"
                         android:fontFamily="@font/robotomedium"/>
@@ -62,43 +65,43 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:background="@drawable/ring_shape"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginTop="55dp"
+                    android:layout_marginTop="60dp"
                     android:layout_marginEnd="10dp"
                     android:scaleType="centerInside"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="7dp"
                         android:src="@drawable/like_btnhdpi"
                         />
                     <TextView
                         android:id="@+id/like"
-                        android:layout_marginTop="3dp"
+                        android:layout_marginTop="1dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:textColor="@color/colorWhite"
-                        android:textSize="7dp"
+                        android:textSize="10dp"
                         android:fontFamily="@font/robotomedium"/>
                 </LinearLayout>
 
                 <com.varunest.sparkbutton.SparkButton
                     android:id="@+id/spark_button"
-                    android:layout_width="40sp"
-                    android:layout_height="40sp"
+                    android:layout_width="30sp"
+                    android:layout_height="30sp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="15dp"
                     app:sparkbutton_activeImage="@drawable/favoritebtnfill"
                     app:sparkbutton_inActiveImage="@drawable/menu_favourites_icnhdpi"
                     app:sparkbutton_iconSize="30sp"
@@ -107,16 +110,24 @@
 
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/info_text"
+            <LinearLayout
+                android:id="@+id/textcolor"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:gravity="left|center_vertical"
-                android:paddingLeft="5dp"
-                android:text="Narva Battle"
-                android:textColor="#FFFFFF"
-                android:textSize="12dp"
-                android:fontFamily="@font/robotomedium"/>
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/info_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingLeft="5dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20dp"
+                    android:gravity="left|center_vertical"
+                    android:fontFamily="@font/robotolight"
+                    android:layout_marginLeft="10dp"/>
+
+
+            </LinearLayout>
 
 
         </LinearLayout>
