--- a/app/src/main/res/layout/tours.xml
+++ b/app/src/main/res/layout/tours.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
@@ -7,10 +7,6 @@
     android:layout_height="match_parent"
     android:background="#405fe5"
     tools:context=".Tours">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <!-- TODO: Update blank fragment layout -->
         <LinearLayout
@@ -27,16 +23,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20sp"
-                android:layout_marginTop="20sp"
                 android:fontFamily="@font/robotomedium"
                 android:text="Featured walks"
                 android:textColor="@color/colorWhite"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:layout_marginTop="10dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list2"
+                android:id="@+id/list"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="205dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp" />
 
@@ -50,16 +46,14 @@
                 android:textSize="20sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list"
+                android:id="@+id/list2"
                 android:layout_width="match_parent"
-                android:layout_height="300sp"
+                android:layout_height="421dp"
                 android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:orientation="vertical" />
         </LinearLayout>
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
