--- a/app/src/main/res/layout/finish_recycleview.xml
+++ b/app/src/main/res/layout/finish_recycleview.xml
@@ -1,45 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center">
-    
-    <LinearLayout
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:scaleType="centerCrop">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#405fe5"
-        android:orientation="vertical"
-        android:gravity="center_vertical">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        card_view:cardCornerRadius="20dp"
+        card_view:cardBackgroundColor="#405fe5">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Thanks for tour"
-            android:textColor="@color/colorWhite"
-            android:fontFamily="@font/robotomedium"
-            android:textSize="25sp"
-            android:layout_gravity="center"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Thanks for choosing this tour"
-            android:textColor="@color/colorWhite"
-            android:layout_gravity="center"
-            android:textSize="18sp"
-            android:fontFamily="@font/robotomedium"
-            android:layout_marginTop="20sp"/>
-        <Button
-            android:id="@+id/finish"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="100dp"
-            android:layout_marginRight="100dp"
-            android:background="#33cc33"
-            android:text="Finish"
-            android:textColor="#ffffff"
-            android:textSize="20sp"
-            android:layout_marginTop="20sp"/>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thanks for tour"
+                android:textColor="@color/colorWhite"
+                android:fontFamily="@font/robotomedium"
+                android:textSize="25sp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thanks for choosing this tour"
+                android:textColor="@color/colorWhite"
+                android:layout_gravity="center"
+                android:textSize="18sp"
+                android:fontFamily="@font/robotomedium"
+                android:layout_marginTop="20sp"/>
+            <Button
+                android:id="@+id/finish"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="#33cc33"
+                android:text="Finish"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"/>
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
 
 </RelativeLayout>
