--- a/app/src/main/res/layout/hint_text_layout.xml
+++ b/app/src/main/res/layout/hint_text_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:scaleType="centerCrop">
 
