--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -100,7 +100,9 @@
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="0dp"
             android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager">
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            android:clipToPadding="false"
+            android:overScrollMode="never">
 
         </androidx.recyclerview.widget.RecyclerView>
 
