--- a/app/src/main/res/layout/recycleview_tours2.xml
+++ b/app/src/main/res/layout/recycleview_tours2.xml
@@ -4,8 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
     android:scaleType="centerCrop">
 
     <androidx.cardview.widget.CardView
@@ -13,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="40px"
-        android:background="#000000">
+        android:background="#000000"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
