--- a/app/src/main/res/layout/tours.xml
+++ b/app/src/main/res/layout/tours.xml
@@ -29,13 +29,14 @@
                 android:textSize="20sp"
                 android:layout_marginTop="10dp"/>
 
-            <androidx.recyclerview.widget.RecyclerView
+            <androidx.viewpager.widget.ViewPager
                 android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="205dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp" />
-
+                android:layout_marginTop="10dp"
+                android:clipToPadding="false"
+                android:overScrollMode="never"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
